# portfolio

./: .gitignore  README.md
elixir/cstools/: .formatter.exs  .gitignore  Dockerfile  README.md  mix.exs
elixir/cstools/assets/: tailwind.config.js
elixir/cstools/assets/css/: app.css
elixir/cstools/assets/js/: app.js
elixir/cstools/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
elixir/cstools/lib/: inneal.ex  inneal_web.ex
elixir/cstools/lib/inneal/: api.ex  application.ex  bouncer.ex  firebase_key_server.ex
elixir/cstools/lib/inneal_web/: endpoint.ex  guardian.ex  plug.ex  router.ex  telemetry.ex
elixir/cstools/lib/inneal_web/components/: core_components.ex  credits.ex  layouts.ex
elixir/cstools/lib/inneal_web/controllers/: app_controller.ex  app_html.ex  error_html.ex  error_json.ex
elixir/cstools/priv/static/assets/: app.css  app.js
elixir/service-credits/: .formatter.exs  Dockerfile  README.md  mix.exs
elixir/service-credits/config/: config.exs  dev.exs  local.exs  prod.exs
elixir/service-credits/lib/credits/: application.ex  credits.ex  entitlements.ex  mongo.ex  repo.ex  user.ex
elixir/service-credits/rel/: env.sh.eex
elixir/service-credits/test/: credits_test.exs  test_helper.exs
elixir/service-credits/test/credits/: broadway_test.exs  entitlements_test.exs  user_test.exs
python/stripe-webhooks/: README.md  app.py  context.py  pyproject.toml
python/stripe-webhooks/events/: invoice.py
python/stripe-webhooks/lib/: icecrystal.py  logging.py  models.py  publisher.py  stripe.py  tables.py  utils.py
(+11 files in other folders)
